# Embedding-generation-proto

./: Cargo.toml  README.md
src/: main.rs
src/db/: mod.rs  qdrant.rs
src/github/: mod.rs
src/routes/: mod.rs
src/utils/: conversation.rs  embeddings.rs  mod.rs
src/utils/conversation/: mod.rs
