[package]
name = "onn"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "4.3.1"
ndarray = "0.15.6"
ort = "1.14.8"
rayon = "1.7.0"
reqwest = "0.11.18"
tokenizers = "0.13.3"
walkdir = "2.3.3"
zip = "0.6.6"
